<resources>
    <string name="app_name">Cameriere</string>
    <string name="shopping_cart">Carrito</string>
    <string name="orders">Pedidos</string>
    <string name="add_to_shopping_cart">Agregar</string>
    <string name="order">Ordenar</string>
    <string name="observations">Observaciones</string>
    <string name="ingredients">Ingredientes</string>
    <string name="description">Descripción</string>
    <string name="prefs_file">com.CCLOM.PREFERENCE_FILE_KEy</string>
    <string name="prefs_codigo">com.CCLOM.PREFERENCE_CODIGO</string>
    <string name="pay">Pagar</string>

    <string-array name="pieces">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>