<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		app:cardBackgroundColor="@color/purple_500"
		app:cardCornerRadius="0dp"
		app:cardElevation="4dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<RelativeLayout
			android:id="@+id/popupMenuTopBar"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<ImageButton
				android:id="@+id/buttonDonePopup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_marginStart="8dp"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:padding="8dp"
				android:src="@drawable/ic_done_24dp"
				android:layout_alignParentStart="true"/>

			<TextView
				android:id="@+id/textViewProductName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_marginStart="8dp"
				android:text=""
				android:textColor="@android:color/white"
				android:textSize="20sp"
				android:layout_toEndOf="@+id/buttonDonePopup"/>

			<ImageButton
				android:id="@+id/buttonClosePopup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_marginEnd="8dp"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:padding="8dp"
				android:src="@drawable/ic_close_24dp"
				android:layout_alignParentEnd="true"/>

		</RelativeLayout>

	</androidx.cardview.widget.CardView>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<LinearLayout
			android:id="@+id/popupMenuLayout"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8dp">

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<ImageView
					android:id="@+id/imageViewProduct"
					android:layout_width="match_parent"
					android:layout_height="210dp" />

			</com.google.android.material.card.MaterialCardView>

			<TextView
				android:id="@+id/textViewDescriptionTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/description"
				android:textAppearance="?attr/textAppearanceSubtitle1" />

			<TextView
				android:id="@+id/textViewProductDescription"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text=""
				android:textAppearance="?attr/textAppearanceBody2"
				android:textColor="?android:attr/textColorSecondary" />

			<TextView
				android:id="@+id/textViewTitleIngredients"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/ingredients"
				android:textAppearance="?attr/textAppearanceSubtitle1" />

			<TextView
				android:id="@+id/textViewProductIngredients"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text=""
				android:textAppearance="?attr/textAppearanceBody2"
				android:textColor="?android:attr/textColorSecondary" />

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:hint="@string/observations"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/editTextObservations"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:inputType="textMultiLine"
					android:minLines="1" />

			</com.google.android.material.textfield.TextInputLayout>

			<LinearLayout
				android:id="@+id/buttonsSendOrderAddToCartLayout"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:layout_marginBottom="8dp">

				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1">

					<com.google.android.material.button.MaterialButton
						android:id="@+id/buttonSendOrder"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:gravity="center"
						android:text="@string/order"
						app:icon="@drawable/ic_send_24dp"/>

				</RelativeLayout>

				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1">

					<com.google.android.material.button.MaterialButton
						android:id="@+id/buttonAddToCart"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:gravity="center"
						android:text="@string/add_to_shopping_cart"
						app:icon="@drawable/ic_add_shopping_cart_24dp" />

				</RelativeLayout>

			</LinearLayout>

		</LinearLayout>

	</androidx.core.widget.NestedScrollView>

</LinearLayout>